feat(api): expose toc nodes with keywords
